--- a/cartons.html
+++ b/cartons.html
@@ -94,7 +94,7 @@
                     <div class="metric-content">
                         <p class="metric-label">Gesamt</p>
                         <p class="metric-value" id="totalCartons">0</p>
-                        <p class="metric-subtext"><span id="totalBoxes">0</span> Kartons • <span id="totalPairs">0</span> Paare</p>
+                        <p class="metric-subtext"><span id="totalBoxes">0</span> Boxen • <span id="totalPairs">0</span> Paare</p>
                     </div>
                 </article>
 
