--- a/amazon-snapshot-upload.html
+++ b/amazon-snapshot-upload.html
@@ -72,108 +72,139 @@
     </header>
 
     <!-- Main Content -->
-    <main class="app-main">
-        <div class="page-header">
-            <h2>📊 Amazon Snapshot Upload</h2>
-            <p class="subtitle">Upload Amazon inventory report to track current stock levels at FBA</p>
-        </div>
+    <main class="app-main lc-upload-page">
+        <section class="page-header">
+            <div class="page-title">
+                <span class="material-icons-outlined" aria-hidden="true">inventory</span>
+                <div class="page-title-copy">
+                    <h1>Amazon Snapshot Upload</h1>
+                    <p>Upload the latest Amazon inventory report to keep FBA stock levels accurate.</p>
+                </div>
+            </div>
+        </section>
 
         <!-- Upload Section -->
-        <div id="uploadSection" class="upload-section">
-            <div class="upload-card">
-                <div class="upload-icon">📄</div>
-                <h3>Select Amazon Snapshot File</h3>
-                <p>Upload your "Manage FBA Inventory" report from Amazon Seller Central</p>
-                
-                <div class="file-input-wrapper">
-                    <input type="file" id="snapshotFileInput" accept=".csv" class="hidden">
-                    <button id="selectFileBtn" class="btn-primary btn-large">
-                        Choose File
-                    </button>
+        <section id="uploadSection" class="surface-card upload-card" aria-labelledby="uploadCardTitle">
+            <header class="upload-card-header">
+                <span class="material-icons-outlined upload-card-icon" aria-hidden="true">cloud_upload</span>
+                <div class="upload-card-copy">
+                    <h2 id="uploadCardTitle">Select Amazon Snapshot File</h2>
+                    <p>Import your "Manage FBA Inventory" CSV from Amazon Seller Central for processing.</p>
                 </div>
+            </header>
 
-                <div id="selectedFileInfo" class="selected-file hidden">
-                    <span class="file-icon">📋</span>
-                    <span id="fileName" class="file-name"></span>
-                    <button id="clearFileBtn" class="btn-clear">&times;</button>
-                </div>
-
-                <div class="upload-hints">
-                    <h4>📝 File Requirements:</h4>
-                    <ul>
-                        <li>File format: CSV (comma-separated)</li>
-                        <li>Must contain "Manage FBA Inventory" report data</li>
-                        <li>Required columns: snapshot-date, fnsku, available</li>
-                        <li>Maximum file size: 5MB</li>
-                    </ul>
-                    <h4 style="margin-top: 20px;">⚠️ Important:</h4>
-                    <ul>
-                        <li>This will <strong>replace</strong> existing snapshot data for the same date</li>
-                        <li>Make sure you're uploading the latest report</li>
-                        <li>File name typically looks like: <code>395561020016_Lagerbestand-Amazonlager.csv</code></li>
-                    </ul>
-                </div>
-
-                <button id="uploadBtn" class="btn-success btn-large hidden">
-                    <span id="uploadBtnText">Parse & Preview</span>
-                    <span id="uploadSpinner" class="spinner hidden"></span>
+            <div class="file-input-wrapper">
+                <input type="file" id="snapshotFileInput" accept=".csv" class="visually-hidden" aria-hidden="true">
+                <button id="selectFileBtn" class="btn btn-primary btn-lg" type="button">
+                    <span class="material-icons-outlined" aria-hidden="true">attach_file</span>
+                    <span>Choose File</span>
                 </button>
             </div>
-        </div>
+
+            <div id="selectedFileInfo" class="selected-file hidden" aria-live="polite">
+                <span class="material-icons-outlined" aria-hidden="true">description</span>
+                <span id="fileName" class="file-name"></span>
+                <button id="clearFileBtn" class="icon-button" type="button" aria-label="Remove selected file">
+                    <span class="material-icons-outlined" aria-hidden="true">close</span>
+                </button>
+            </div>
+
+            <div class="upload-hints" aria-labelledby="uploadHintsTitle">
+                <div class="upload-hints-header">
+                    <span class="material-icons-outlined" aria-hidden="true">info</span>
+                    <h3 id="uploadHintsTitle">File Requirements</h3>
+                </div>
+                <ul class="upload-hints-list">
+                    <li><span class="material-icons-outlined" aria-hidden="true">check_circle</span><span>Format: CSV (comma-separated)</span></li>
+                    <li><span class="material-icons-outlined" aria-hidden="true">check_circle</span><span>Includes columns: <code>snapshot-date</code>, <code>fnsku</code>, <code>available</code></span></li>
+                    <li><span class="material-icons-outlined" aria-hidden="true">check_circle</span><span>Maximum file size: 5&nbsp;MB</span></li>
+                </ul>
+                <div class="upload-hints-header">
+                    <span class="material-icons-outlined" aria-hidden="true">warning</span>
+                    <h3>Important</h3>
+                </div>
+                <ul class="upload-hints-list">
+                    <li><span class="material-icons-outlined" aria-hidden="true">priority_high</span><span>Uploading replaces snapshot data for matching dates.</span></li>
+                    <li><span class="material-icons-outlined" aria-hidden="true">priority_high</span><span>Confirm the file is the most recent export.</span></li>
+                    <li><span class="material-icons-outlined" aria-hidden="true">priority_high</span><span>Typical file name: <code>395561020016_Lagerbestand-Amazonlager.csv</code></span></li>
+                </ul>
+            </div>
+
+            <button id="uploadBtn" class="btn btn-primary btn-lg hidden" type="button">
+                <span id="uploadBtnText">Parse &amp; Preview</span>
+                <span id="uploadSpinner" class="spinner hidden" aria-hidden="true"></span>
+            </button>
+        </section>
 
         <!-- Preview Section (Hidden initially) -->
-        <div id="previewSection" class="preview-section hidden">
+        <section id="previewSection" class="preview-section hidden" aria-live="polite">
             <!-- Summary Card -->
-            <div class="summary-card">
-                <h3>📊 Upload Summary</h3>
-                <div class="summary-grid">
+            <article class="surface-card summary-card" aria-labelledby="summaryTitle">
+                <header class="summary-header">
+                    <span class="material-icons-outlined" aria-hidden="true">analytics</span>
+                    <div>
+                        <h2 id="summaryTitle">Upload Summary</h2>
+                        <p>Review totals before importing the snapshot to the database.</p>
+                    </div>
+                </header>
+                <dl class="summary-grid">
                     <div class="summary-item">
-                        <span class="summary-label">Snapshot Date:</span>
-                        <span id="summaryDate" class="summary-value"></span>
+                        <dt>Snapshot Date</dt>
+                        <dd id="summaryDate">—</dd>
                     </div>
                     <div class="summary-item">
-                        <span class="summary-label">Products Found:</span>
-                        <span id="summaryProducts" class="summary-value"></span>
+                        <dt>Products Found</dt>
+                        <dd id="summaryProducts">0</dd>
                     </div>
                     <div class="summary-item">
-                        <span class="summary-label">Total Available Boxes:</span>
-                        <span id="summaryBoxes" class="summary-value"></span>
+                        <dt>Total Available Boxes</dt>
+                        <dd id="summaryBoxes">0</dd>
                     </div>
                     <div class="summary-item">
-                        <span class="summary-label">Rows Processed:</span>
-                        <span id="summaryRows" class="summary-value"></span>
+                        <dt>Rows Processed</dt>
+                        <dd id="summaryRows">0</dd>
                     </div>
-                </div>
+                </dl>
 
                 <div class="location-info">
-                    <strong>⚠️ Note:</strong> This will <span class="badge-location">REPLACE</span> existing snapshot data for this date
+                    <span class="material-icons-outlined" aria-hidden="true">warehouse</span>
+                    <p>This import will <span class="badge badge-location">replace</span> existing snapshot data for the selected date.</p>
                 </div>
-            </div>
+            </article>
 
             <!-- Warnings (if any) -->
-            <div id="warningsCard" class="warnings-card hidden">
-                <h3>⚠️ Warnings</h3>
+            <article id="warningsCard" class="surface-card warnings-card hidden" aria-live="polite" aria-labelledby="warningsTitle">
+                <header class="warnings-header">
+                    <span class="material-icons-outlined" aria-hidden="true">warning</span>
+                    <div>
+                        <h2 id="warningsTitle">Warnings</h2>
+                        <p>Investigate potential data issues prior to confirming the import.</p>
+                    </div>
+                </header>
                 <ul id="warningsList" class="warnings-list"></ul>
-            </div>
+            </article>
 
             <!-- Preview Table -->
-            <div class="preview-card">
+            <article class="surface-card preview-card" aria-labelledby="previewTitle">
                 <div class="preview-header">
-                    <h3>📋 Preview First 20 Products</h3>
-                    <p style="color: #666; font-size: 0.9rem; margin: 5px 0 0 0;">
-                        Showing available inventory (in boxes) at Amazon FBA
-                    </p>
+                    <div class="preview-header-title">
+                        <span class="material-icons-outlined" aria-hidden="true">table_view</span>
+                        <div>
+                            <h2 id="previewTitle">Preview First 20 Products</h2>
+                            <p>Showing available inventory (boxes) at Amazon FBA.</p>
+                        </div>
+                    </div>
                 </div>
 
-                <div class="table-container">
-                    <table class="preview-table">
+                <div class="table-scroll" role="region" aria-live="polite" aria-label="Amazon snapshot preview">
+                    <table class="preview-table table-sticky">
                         <thead>
                             <tr>
-                                <th>FNSKU</th>
-                                <th>SKU</th>
-                                <th>Product Name</th>
-                                <th>Available Boxes</th>
-                                <th>Status</th>
+                                <th scope="col">FNSKU</th>
+                                <th scope="col">SKU</th>
+                                <th scope="col">Product Name</th>
+                                <th scope="col" class="numeric">Available Boxes</th>
+                                <th scope="col">Status</th>
                             </tr>
                         </thead>
                         <tbody id="previewTableBody">
@@ -181,25 +212,26 @@
                         </tbody>
                     </table>
                 </div>
-            </div>
+            </article>
 
             <!-- Action Buttons -->
             <div class="action-buttons">
-                <button id="cancelBtn" class="btn-secondary btn-large">
-                    ❌ Cancel
+                <button id="cancelBtn" class="btn btn-secondary btn-lg" type="button">
+                    <span class="material-icons-outlined" aria-hidden="true">close</span>
+                    <span>Cancel</span>
                 </button>
-                <button id="confirmBtn" class="btn-success btn-large">
-                    <span id="confirmBtnText">✅ Confirm & Import</span>
-                    <span id="confirmSpinner" class="spinner hidden"></span>
+                <button id="confirmBtn" class="btn btn-primary btn-lg" type="button">
+                    <span id="confirmBtnText" class="btn-label">Confirm &amp; Import</span>
+                    <span id="confirmSpinner" class="spinner hidden" aria-hidden="true"></span>
                 </button>
             </div>
-        </div>
+        </section>
 
         <!-- Success Section (Hidden initially) -->
-        <div id="successSection" class="success-section hidden">
-            <div class="success-card">
-                <div class="success-icon">✅</div>
-                <h2>Import Successful!</h2>
+        <section id="successSection" class="success-section hidden" aria-live="polite">
+            <article class="surface-card success-card">
+                <span class="material-icons-outlined success-icon" aria-hidden="true">check_circle</span>
+                <h2>Import Successful</h2>
                 <div class="success-stats">
                     <div class="stat-item">
                         <span class="stat-value" id="successProducts">0</span>
@@ -211,29 +243,32 @@
                     </div>
                 </div>
                 <div class="success-actions">
-                    <button id="uploadAnotherBtn" class="btn-primary">
-                        Upload Another File
+                    <button id="uploadAnotherBtn" class="btn btn-primary" type="button">
+                        <span class="material-icons-outlined" aria-hidden="true">refresh</span>
+                        <span>Upload Another File</span>
                     </button>
-                    <button id="viewDashboardBtn" class="btn-secondary">
-                        View Dashboard
+                    <button id="viewDashboardBtn" class="btn btn-secondary" type="button">
+                        <span class="material-icons-outlined" aria-hidden="true">dashboard</span>
+                        <span>View Dashboard</span>
                     </button>
                 </div>
-            </div>
-        </div>
+            </article>
+        </section>
 
         <!-- Error Section (Hidden initially) -->
-        <div id="errorSection" class="error-section hidden">
-            <div class="error-card">
-                <div class="error-icon">❌</div>
+        <section id="errorSection" class="error-section hidden" aria-live="polite">
+            <article class="surface-card error-card">
+                <span class="material-icons-outlined error-icon" aria-hidden="true">error</span>
                 <h2>Upload Failed</h2>
                 <p id="errorMessage" class="error-message"></p>
                 <div class="error-actions">
-                    <button id="tryAgainBtn" class="btn-primary">
-                        Try Again
+                    <button id="tryAgainBtn" class="btn btn-primary" type="button">
+                        <span class="material-icons-outlined" aria-hidden="true">replay</span>
+                        <span>Try Again</span>
                     </button>
                 </div>
-            </div>
-        </div>
+            </article>
+        </section>
     </main>
 
     <!-- Scripts -->
