--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons+Outlined" rel="stylesheet">
     <link rel="stylesheet" href="./css/main.css">
-    <link rel="icon" type="image/png" href="/favicon.ico"/>
+    <link rel="icon" type="image/png" sizes="32x32" href="./assets/favicon.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="./assets/apple-touch-icon.png">
+
     <script>
         // Inline auth check to avoid loading issues
         (function() {
@@ -56,7 +58,7 @@
     <div id="mainApp" class="hidden">
         <header class="site-header">
             <div class="branding">
-                <span class="material-icons-outlined brand-icon" aria-hidden="true">move_up</span>
+                <img src="./assets/logo.png" alt="WarehouseWrangler Logo" class="brand-logo">
                 <div class="brand-copy">
                     <span class="brand-name">WarehouseWrangler</span>
                     <span class="brand-tagline">Fulfillment Control Center</span>
