--- a/login.html
+++ b/login.html
@@ -5,13 +5,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login - WarehouseWrangler</title>
     <link rel="stylesheet" href="css/login.css">
+    <link rel="icon" type="image/png" sizes="32x32" href="./assets/favicon.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="./assets/apple-touch-icon.png">
 </head>
 <body>
     <div class="login-container">
         <div class="login-card">
             <!-- Logo/Header -->
             <div class="login-header">
-                <h1>🏭 WarehouseWrangler</h1>
+                <img src="./assets/logo.png" alt="WarehouseWrangler Logo" class="brand-logo">
+                <h1>WarehouseWrangler</h1>
                 <p>Inventory Management System</p>
             </div>
 
