--- a/shipments.html
+++ b/shipments.html
@@ -10,7 +10,8 @@
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons+Outlined" rel="stylesheet">
     <link rel="stylesheet" href="./css/main.css">
     <link rel="stylesheet" href="./css/shipments.css">
-    <link rel="icon" type="image/png" href="/favicon.ico"/>
+    <link rel="icon" type="image/png" sizes="32x32" href="./assets/favicon.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="./assets/apple-touch-icon.png">
     <script>
         // Inline auth check
         (function() {
@@ -38,7 +39,7 @@
 <body>
     <header class="site-header">
         <div class="branding">
-            <span class="material-icons-outlined brand-icon" aria-hidden="true">move_up</span>
+            <img src="./assets/logo.png" alt="WarehouseWrangler Logo" class="brand-logo">
             <div class="brand-copy">
                 <span class="brand-name">WarehouseWrangler</span>
                 <span class="brand-tagline">Fulfillment Control Center</span>
