--- a/index.html
+++ b/index.html
@@ -8,17 +8,16 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons+Outlined" rel="stylesheet">
-    <link rel="stylesheet" href="./css/main.css">
-    <link rel="icon" type="image/png" sizes="32x32" href="./assets/favicon.png">
-    <link rel="apple-touch-icon" sizes="180x180" href="./assets/apple-touch-icon.png">
-
+    <link rel="stylesheet" href="../css/main.css">
+    <link rel="stylesheet" href="css/dashboard.css">
+    <link rel="icon" type="image/png" sizes="32x32" href="../assets/favicon.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="../assets/apple-touch-icon.png">
     <script>
-        // Inline auth check to avoid loading issues
         (function() {
             const token = localStorage.getItem('ww_auth_token');
 
             if (!token) {
-                window.location.href = 'login.html';
+                window.location.href = '/login.html';
                 return;
             }
 
@@ -26,7 +25,7 @@
                 const parts = token.split('.');
                 if (parts.length !== 3) {
                     localStorage.removeItem('ww_auth_token');
-                    window.location.href = 'login.html';
+                    window.location.href = '/login.html';
                     return;
                 }
 
@@ -35,13 +34,13 @@
 
                 if (payload.exp <= now) {
                     localStorage.removeItem('ww_auth_token');
-                    window.location.href = 'login.html';
+                    window.location.href = '/login.html';
                     return;
                 }
-            } catch (e) {
-                console.error('Token validation error:', e);
+            } catch (error) {
+                console.error('Token validation error:', error);
                 localStorage.removeItem('ww_auth_token');
-                window.location.href = 'login.html';
+                window.location.href = '/login.html';
             }
         })();
     </script>
@@ -58,7 +57,7 @@
     <div id="mainApp" class="hidden">
         <header class="site-header">
             <div class="branding">
-                <img src="./assets/logo.png" alt="WarehouseWrangler Logo" class="brand-logo">
+                <img src="../assets/logo.png" alt="WarehouseWrangler Logo" class="brand-logo">
                 <div class="brand-copy">
                     <span class="brand-name">WarehouseWrangler</span>
                     <span class="brand-tagline">Fulfillment Control Center</span>
@@ -67,14 +66,14 @@
 
             <nav class="primary-nav" aria-label="Main navigation">
                 <ul class="nav-list">
-                    <li><a class="nav-link is-active" href="index.html" aria-current="page"><span class="material-icons-outlined" aria-hidden="true">dashboard</span><span>Dashboard</span></a></li>
-                    <li><a class="nav-link" href="amazon-snapshot-upload.html"><span class="material-icons-outlined" aria-hidden="true">cloud_upload</span><span>Amazon Snapshot</span></a></li>
-                    <li><a class="nav-link" href="cartons.html"><span class="material-icons-outlined" aria-hidden="true">inventory_2</span><span>Cartons</span></a></li>
-                    <li><a class="nav-link" href="lc-upload.html"><span class="material-icons-outlined" aria-hidden="true">upload_file</span><span>LC Upload</span></a></li>
-                    <li><a class="nav-link" href="products.html"><span class="material-icons-outlined" aria-hidden="true">view_list</span><span>Products</span></a></li>
-                    <li><a class="nav-link" href="shipments.html"><span class="material-icons-outlined" aria-hidden="true">local_shipping</span><span>Shipments</span></a></li>
-                    <li><a class="nav-link" href="users.html"><span class="material-icons-outlined" aria-hidden="true">group</span><span>Users</span></a></li>
-                    <li><a class="nav-link" href="login.html"><span class="material-icons-outlined" aria-hidden="true">lock</span><span>Login</span></a></li>
+                    <li><a class="nav-link is-active" href="../index.html" aria-current="page"><span class="material-icons-outlined" aria-hidden="true">dashboard</span><span>Dashboard</span></a></li>
+                    <li><a class="nav-link" href="../amazon-snapshot-upload.html"><span class="material-icons-outlined" aria-hidden="true">cloud_upload</span><span>Amazon Snapshot</span></a></li>
+                    <li><a class="nav-link" href="../cartons.html"><span class="material-icons-outlined" aria-hidden="true">inventory_2</span><span>Cartons</span></a></li>
+                    <li><a class="nav-link" href="../lc-upload.html"><span class="material-icons-outlined" aria-hidden="true">upload_file</span><span>LC Upload</span></a></li>
+                    <li><a class="nav-link" href="../products.html"><span class="material-icons-outlined" aria-hidden="true">view_list</span><span>Products</span></a></li>
+                    <li><a class="nav-link" href="../shipments.html"><span class="material-icons-outlined" aria-hidden="true">local_shipping</span><span>Shipments</span></a></li>
+                    <li><a class="nav-link" href="../users.html"><span class="material-icons-outlined" aria-hidden="true">group</span><span>Users</span></a></li>
+                    <li><a class="nav-link" href="../login.html"><span class="material-icons-outlined" aria-hidden="true">lock</span><span>Login</span></a></li>
                 </ul>
             </nav>
 
@@ -91,139 +90,22 @@
         </header>
 
         <main class="app-main">
-            <section class="hero">
-                <div class="hero-content">
-                    <h2>Welcome to WarehouseWrangler</h2>
-                    <p>Monitor incoming shipments, validate carton data, and keep Amazon reconciliations audit-ready with a single, trusted control center.</p>
-                    <div class="hero-actions">
-                        <a class="btn btn-primary" href="lc-upload.html">
-                            <span class="material-icons-outlined" aria-hidden="true">rocket_launch</span>
-                            <span>Launch LC Upload</span>
-                        </a>
-                        <a class="btn btn-secondary" href="users.html">
-                            <span class="material-icons-outlined" aria-hidden="true">person_add</span>
-                            <span>Manage Users</span>
-                        </a>
-                    </div>
+            <section id="dashboard" aria-labelledby="dashboardTitle">
+                <h2 id="dashboardTitle">Dashboard</h2>
+                <div class="controls">
+                    <label>Target date <input type="date" id="coverageTarget"></label>
+                    <label><input type="checkbox" id="toggleAmazon" checked> Include Amazon</label>
+                    <label><input type="checkbox" id="toggleAdditional" checked> Include Additional</label>
+                    <label><input type="checkbox" id="toggleSim"> Include simulations</label>
+                    <label><input type="checkbox" id="toggleFuture"> Include future ETAs</label>
+                    <span>Min cover: <strong id="leadTimeWeeks"></strong> weeks</span>
+                    <span>Internal: <strong id="totalsInternal"></strong> | All: <strong id="totalsAll"></strong></span>
                 </div>
-                <div class="hero-highlights" aria-label="Operational highlights">
-                    <article class="highlight-card">
-                        <span class="material-icons-outlined highlight-icon success" aria-hidden="true">task_alt</span>
-                        <div class="highlight-copy">
-                            <h3>Authentication Secure</h3>
-                            <p>Session tokens validated with real-time expiry checks.</p>
-                        </div>
-                    </article>
-                    <article class="highlight-card">
-                        <span class="material-icons-outlined highlight-icon warning" aria-hidden="true">inventory</span>
-                        <div class="highlight-copy">
-                            <h3>Carton Intake</h3>
-                            <p>Configure carton verification flows before the next shipment arrives.</p>
-                        </div>
-                    </article>
-                </div>
-            </section>
-
-            <section class="dashboard-grid" aria-label="Key actions and updates">
-                <article class="card">
-                    <header class="card-header">
-                        <span class="material-icons-outlined" aria-hidden="true">bolt</span>
-                        <h3>Quick Actions</h3>
-                    </header>
-                    <ul class="action-list">
-                        <li>
-                            <a class="action-link" href="products.html">
-                                <span class="material-icons-outlined" aria-hidden="true">category</span>
-                                <span>Organize product catalog for inbound shipments.</span>
-                            </a>
-                        </li>
-                        <li>
-                            <a class="action-link" href="cartons.html">
-                                <span class="material-icons-outlined" aria-hidden="true">qr_code_scanner</span>
-                                <span>Validate carton IDs before labeling.</span>
-                            </a>
-                        </li>
-                        <li>
-                            <a class="action-link" href="amazon-snapshot-upload.html">
-                                <span class="material-icons-outlined" aria-hidden="true">compare_arrows</span>
-                                <span>Upload the latest Amazon inventory snapshot.</span>
-                            </a>
-                        </li>
-                    </ul>
-                </article>
-
-                <article class="card">
-                    <header class="card-header">
-                        <span class="material-icons-outlined" aria-hidden="true">insights</span>
-                        <h3>System Health</h3>
-                    </header>
-                    <ul class="status-list">
-                        <li>
-                            <span class="status-indicator success" aria-hidden="true"></span>
-                            <span>Authentication service online</span>
-                        </li>
-                        <li>
-                            <span class="status-indicator warning" aria-hidden="true"></span>
-                            <span>Carton reconciliation awaiting data</span>
-                        </li>
-                        <li>
-                            <span class="status-indicator danger" aria-hidden="true"></span>
-                            <span>Amazon recall actions require confirmation flow</span>
-                        </li>
-                    </ul>
-                </article>
-
-                <article class="card">
-                    <header class="card-header">
-                        <span class="material-icons-outlined" aria-hidden="true">playlist_add_check</span>
-                        <h3>Next Steps</h3>
-                    </header>
-                    <ol class="next-steps">
-                        <li>Finalize carton management UI for sticky headers and zebra striping.</li>
-                        <li>Configure confirmation modals for recall workflows.</li>
-                        <li>Extend upload validation with real-time field feedback.</li>
-                    </ol>
-                </article>
+                <div id="dashboard-bars" class="bars" role="list"></div>
             </section>
         </main>
     </div>
 
-    <script>
-        document.addEventListener('DOMContentLoaded', function() {
-            const loadingScreen = document.getElementById('loadingScreen');
-            const mainApp = document.getElementById('mainApp');
-            const userDisplay = document.getElementById('userDisplay');
-
-            const userDataStr = localStorage.getItem('ww_user_data');
-            if (userDataStr) {
-                try {
-                    const userData = JSON.parse(userDataStr);
-                    if (userData && userDisplay) {
-                        userDisplay.textContent = `${userData.username}`;
-                    }
-                } catch (e) {
-                    console.error('Error parsing user data:', e);
-                }
-            }
-
-            if (loadingScreen) {
-                loadingScreen.style.display = 'none';
-            }
-            if (mainApp) {
-                mainApp.classList.remove('hidden');
-            }
-
-            const logoutBtn = document.getElementById('logoutBtn');
-            if (logoutBtn) {
-                logoutBtn.addEventListener('click', function() {
-                    if (confirm('Are you sure you want to logout?')) {
-                        localStorage.removeItem('ww_auth_token');
-                        localStorage.removeItem('ww_user_data');
-                        window.location.href = 'login.html';
-                    }
-                });
-            }
-        });
-    </script>
+    <script type="module" src="js/dashboard.js" defer></script>
 </body>
 </html>
