Add planned stock management frontend

--- a/index.html
+++ b/index.html
@@ -69,6 +69,7 @@
                     <li><a class="nav-link is-active" href="../index.html" aria-current="page"><span class="material-icons-outlined" aria-hidden="true">dashboard</span><span>Dashboard</span></a></li>
                     <li><a class="nav-link" href="../amazon-snapshot-upload.html"><span class="material-icons-outlined" aria-hidden="true">cloud_upload</span><span>Amazon Snapshot</span></a></li>
                     <li><a class="nav-link" href="../cartons.html"><span class="material-icons-outlined" aria-hidden="true">inventory_2</span><span>Cartons</span></a></li>
+                    <li><a class="nav-link" href="../planned-stock.html"><span class="material-icons-outlined" aria-hidden="true">analytics</span><span>Planned Stock</span></a></li>
                     <li><a class="nav-link" href="../lc-upload.html"><span class="material-icons-outlined" aria-hidden="true">upload_file</span><span>LC Upload</span></a></li>
                     <li><a class="nav-link" href="../products.html"><span class="material-icons-outlined" aria-hidden="true">view_list</span><span>Products</span></a></li>
                     <li><a class="nav-link" href="../shipments.html"><span class="material-icons-outlined" aria-hidden="true">local_shipping</span><span>Shipments</span></a></li>
