Add carton tooltip metadata support

--- a/cartons.html
+++ b/cartons.html
@@ -196,6 +196,7 @@
                     <tbody id="cartonsTableBody"></tbody>
                 </table>
             </div>
+            <div id="cartonTooltip" class="carton-tooltip" role="status" aria-live="polite" aria-hidden="true"></div>
             <div id="cartonsEmpty" class="empty-state is-hidden">
                 <span class="material-icons-outlined" aria-hidden="true">inventory_2</span>
                 <p>Keine Cartons gefunden. Passe die Filter an oder aktualisiere die Liste.</p>
