--- a/lc-upload.html
+++ b/lc-upload.html
@@ -190,8 +190,9 @@
                     </label>
                 </div>
                 <div class="table-scroll" role="region" aria-label="Carton Vorschau">
-                    <table class="preview-table table-sticky">
-                        <thead>
+                    <div class="table-scroll__viewport">
+                        <table class="preview-table table-sticky">
+                            <thead>
                             <tr>
                                 <th scope="col">Carton</th>
                                 <th scope="col">FNSKU</th>
@@ -200,8 +201,9 @@
                                 <th scope="col">Typ</th>
                             </tr>
                         </thead>
-                        <tbody id="previewTableBody"></tbody>
-                    </table>
+                            <tbody id="previewTableBody"></tbody>
+                        </table>
+                    </div>
                 </div>
             </article>
 
