--- a/products.html
+++ b/products.html
@@ -109,8 +109,9 @@
             <div id="loadingIndicator" class="loading-indicator">Loading products…</div>
 
             <div class="table-scroll" role="region" aria-live="polite" aria-label="Produktliste">
-                <table id="productsTable" class="products-table table-sticky is-hidden">
-                    <thead>
+                <div class="table-scroll__viewport">
+                    <table id="productsTable" class="products-table table-sticky is-hidden">
+                        <thead>
                         <tr>
                             <th scope="col">Produkt (Gruppe)<br><small>Artikel</small></th>
                             <th scope="col">Artikel</th>
@@ -124,8 +125,9 @@
                             <th scope="col" class="actions-col">Aktionen</th>
                         </tr>
                     </thead>
-                    <tbody id="productsTableBody"></tbody>
-                </table>
+                        <tbody id="productsTableBody"></tbody>
+                    </table>
+                </div>
             </div>
             <div id="noResults" class="empty-state is-hidden">
                 <span class="material-icons-outlined" aria-hidden="true">search_off</span>
