Align dashboard table view with shared table styles

--- a/index.html
+++ b/index.html
@@ -112,29 +112,31 @@
                 </section>
                 <section id="dashboard-table-panel" class="dashboard-panel hidden" role="tabpanel"
                     aria-labelledby="dashboard-tab-table" aria-hidden="true" tabindex="-1">
-                    <div class="dashboard-table-wrapper">
-                        <div class="dashboard-table-scroll">
-                            <table id="dashboard-table">
-                                <thead>
-                                    <tr>
-                                        <th scope="col">Product</th>
-                                        <th scope="col">Min Cover (w)</th>
-                                        <th scope="col">Target Cover (w)</th>
-                                        <th scope="col">To-Order (boxes)</th>
-                                        <th scope="col">To-Order (pairs)</th>
-                                        <th scope="col">Incoming</th>
-                                        <th scope="col">WML</th>
-                                        <th scope="col">GMR</th>
-                                        <th scope="col">Amazon</th>
-                                        <th scope="col">Additional</th>
-                                        <th scope="col">Internal Pairs</th>
-                                        <th scope="col">Internal Weeks</th>
-                                        <th scope="col">All Pairs</th>
-                                        <th scope="col">All Weeks</th>
-                                    </tr>
-                                </thead>
-                                <tbody></tbody>
-                            </table>
+                    <div class="surface-card table-card" aria-label="Coverage table">
+                        <div class="table-scroll" role="region" aria-live="polite" aria-label="Coverage table data">
+                            <div class="table-scroll__viewport">
+                                <table id="dashboard-table" class="dashboard-table table-sticky">
+                                    <thead>
+                                        <tr>
+                                            <th scope="col">Product</th>
+                                            <th scope="col">Min Cover (w)</th>
+                                            <th scope="col">Target Cover (w)</th>
+                                            <th scope="col">To-Order (boxes)</th>
+                                            <th scope="col">To-Order (pairs)</th>
+                                            <th scope="col">Incoming</th>
+                                            <th scope="col">WML</th>
+                                            <th scope="col">GMR</th>
+                                            <th scope="col">Amazon</th>
+                                            <th scope="col">Additional</th>
+                                            <th scope="col">Internal Pairs</th>
+                                            <th scope="col">Internal Weeks</th>
+                                            <th scope="col">All Pairs</th>
+                                            <th scope="col">All Weeks</th>
+                                        </tr>
+                                    </thead>
+                                    <tbody></tbody>
+                                </table>
+                            </div>
                         </div>
                     </div>
                 </section>
