Show Artikel in dashboard table view

--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
                                 <table id="dashboard-table" class="dashboard-table table-sticky">
                                     <thead>
                                         <tr>
-                                            <th scope="col">Product</th>
+                                            <th scope="col">Artikel</th>
                                             <th scope="col">Min Cover (w)</th>
                                             <th scope="col">Target Cover (w)</th>
                                             <th scope="col">To-Order (boxes)</th>
