Add shared footer across application shells

--- a/users.html
+++ b/users.html
@@ -215,6 +215,25 @@
     </div>
 
     <!-- Scripts -->
+    <footer class="site-footer">
+        <div class="site-footer__inner">
+            <div class="site-footer__section">
+                <span class="site-footer__copyright">© <span class="site-footer__year" data-footer-year data-current-year="2024">2024</span> WarehouseWrangler</span>
+            </div>
+            <div class="site-footer__section site-footer__created-by">
+                <span class="site-footer__label">Created by</span>
+                <a href="https://threegents.eu" class="site-footer__link" target="_blank" rel="noopener">
+                    <img src="https://threegents.eu/images/logo_light.svg" alt="ThreeGents logo" class="site-footer__logo">
+                    <span>ThreeGents</span>
+                </a>
+            </div>
+            <div class="site-footer__section">
+                <a href="mailto:support@threegents.biz" class="site-footer__link">Support</a>
+            </div>
+        </div>
+    </footer>
+
     <script src="./js/users.js"></script>
+    <script type="module" src="./js/footer.js"></script>
 </body>
 </html>
